# AI

./: .envrc  .gitignore  README.md  environment.yml  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json  docker-compose.yaml
data/documents/BOCYL/: BOCYL-D-02042025-23.md  BOCYL-D-02042025-45.md  BOCYL-D-02042025-48.md  BOCYL-D-07032025-16.md  BOCYL-D-07032025-17.md  BOCYL-D-07042025-29.md  BOCYL-D-10022025-11.md  BOCYL-D-10022025-12.md  BOCYL-D-10022025-13.md  BOCYL-D-10022025-2.md  BOCYL-D-11042025-15.md  BOCYL-D-14042025-56.md  BOCYL-D-18072023-10.md  BOCYL-D-21032025-1.md  BOCYL-D-21032025-2.md  BOCYL-D-21032025-21.md  BOCYL-D-21032025-22.md  BOCYL-D-21032025-23.md  BOCYL-D-21032025-24.md  BOCYL-D-21032025-25.md  BOCYL-D-21032025-26.md  BOCYL-D-21032025-9.md  BOCYL-D-21042025-1.md  BOCYL-D-26022025-18.md
data/prompts/boe/: output_parser.py
data/prompts/boe/tema/: template.md
data/prompts/futbol/: output_parser.py
data/prompts/futbol/liga_jornada/: template.md
data/prompts/trading/: output_parser.py
data/prompts/trading/explain_top_returns/: template.md
data/prompts/weather/: output_parser.py
data/prompts/weather/date_range/: template.md
data/prompts/weather/from_date/: template.md
modules/: models.py  preprocessing.py  prompt.py  utils.py
modules/vectordb/: __init__.py  bocyl.py
notebooks/10_Chat VSCode/: README.md
notebooks/10_Chat VSCode/1_BOCYL/documents/: BOCYL-D-02012024-12.md
notebooks/10_Chat VSCode/1_BOCYL/research/: requisitos_autonomos.md
notebooks/20_API Programming/1_Manual/: README.md
notebooks/20_API Programming/2_API/: 1C_Steps.ipynb  2C_Explain.ipynb  README.md
notebooks/20_API Programming/3_Preprocessing/: 1C_Explain.ipynb
notebooks/30_Output Format/1_Pydantic/: 1C_Steps BOE.ipynb  1C_Steps.ipynb
notebooks/30_Output Format/2_Preprocessing/: 1C_Simple.ipynb  2C_Advanced.ipynb
notebooks/3_Output Format/1_Pydantic/: 1C_Steps.ipynb
notebooks/3_Output Format/2_Preprocessing/: 1C_Simple.ipynb
notebooks/40_RAG/1_RAG/: 1C_RAG.ipynb
notebooks/40_RAG/2_VectorDB/: 1C_Upsert.ipynb  README.md
notebooks/40_RAG/3_Chat CLI/: README.md  rag_cli.py
notebooks/5_Extra/: README.md
(+25 files in other folders)
