[project]
name = "ai"
version = "0.1.0"
description = "AI project"
authors = [{ name = "Jesus Lopez", email = "jesus.lopez@datons.ai" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "papermill",
    "pandas",
    "matplotlib",
    "openpyxl",
    "s3fs",
    "plotly",
    "langchain",
    "langchain-openai",
    "yfinance",
    "sentence-transformers",
    "ipywidgets",
    "langchain-chroma",
    "langchain-huggingface",
    "chromadb",
    "langchain-community",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "ruff>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["/ai", "/notebooks", "/*.py"]
exclude = ["/.venv", "/.git", "/__pycache__", "*.pyc"]

[tool.ruff]
# Enable all rules by default
line-length = 120
target-version = "py310"

# Enable all rules
lint.select = ["E", "F", "I", "N", "B", "W", "C90"]
lint.ignore = []

# Configure isort rules
lint.isort.combine-as-imports = true
lint.isort.split-on-trailing-comma = true
lint.isort.lines-between-types = 1
lint.isort.known-first-party = []
lint.isort.known-third-party = []
lint.isort.section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

# Configure linting
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.mccabe.max-complexity = 10

# Configure docstring and inline quotes
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "single"

# Configure formatting
format.quote-style = "single"
format.indent-style = "space"
format.skip-magic-trailing-comma = false
format.line-ending = "auto"

# Exclude directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
